--- a/index.html
+++ b/index.html
@@ -5,20 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-
-    <title>Vanilla-weather-app</title>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" 
+   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
+<title>Vanilla-weather-app</title>
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">Click </a>
+				<img src="src/imageBG2.jpg" alt="Image" width="440px" height="600px" />
+      <div class="weather-card">
+        <form class="search-form" id="search-form">
+          <div class="row">
+            <div class="col-9">
+              <input
+                type="search"
+                placeholder="Enter a city"
+                autofocus="on"
+                autocomplete="off"
+                id="search-input"
+                class="form-control shadow-sm"
+              />
+            </div>
+            <div class="col-3">
+              <input type="submit" value="Search" class="search-button" />
+            </div>
+          </div>
+        </form>
+        <h1 class="city" id="city">Frankfurt</h1>
+          <div class="date" id="date"></div>
+   
+<div class="row">
+          <div class="col-6" >
+            <div class="clearfix weather-temperature">
+              <img src="" alt="Clear" id="icon" 
+              class="float-left"/>
+                <span class="temperature" id="temperature">21</span
+                ><span class="units">
+                  <a href="#" id="celsius-link"> °C</a> |
+                  <a href="#" id="fahrenheit-link">°F</a>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6" id="Info-info">
+            <ul>
+              <li>Precipitation: 1%</li>
+              <li>Humidity: 49%</li>
+              <li>Wind: 14 km/h</li>
+            </ul>
+          </div>
+        </div>
+        <div class="container under-Sign">
+          <div class="row justify-content-start">
+            <div class="col">
+        <div class="Undersign" id="under-Sign">created by Josephine Jacobs,
+          <a href="https://github.com/JosephineJacobs/WeatherApp-JJ" target="_blank"> Open-Source code</a></div>
+        </div>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
-</html>
+</htm>
