--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-				<img src="src/imageBG2.jpg" alt="Image" width="440px" height="600px" />
+				<img src="src/imageBG2.jpg" alt="Image" width="540px" height="700px" />
       <div class="weather-card">
         <form class="search-form" id="search-form">
           <div class="row">
@@ -32,12 +32,12 @@
         </form>
         <h1 class="city" id="city">Frankfurt</h1>
           <div class="date" id="date"></div>
-   
+          <div class="weather-Condition" id="weather-Condition">Cloudy</div>
+      <br />
 <div class="row">
-          <div class="col-6" >
-            <div class="clearfix weather-temperature">
-              <img src="" alt="Clear" id="icon" 
-              class="float-left"/>
+          <div class="col-6">
+            <div class="clearfix">
+              <div class="float-left">
                 <span class="temperature" id="temperature">21</span
                 ><span class="units">
                   <a href="#" id="celsius-link"> °C</a> |
@@ -46,7 +46,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6" id="Info-info">
+          <div class="col-6">
             <ul>
               <li>Precipitation: 1%</li>
               <li>Humidity: 49%</li>
@@ -54,11 +54,40 @@
             </ul>
           </div>
         </div>
+        <br/>
+        <br/>
+        <div class="container text-center">
+          <div class="row justify-content-start">
+            <div class="col">
+              <p class="day">Today</p>
+              <p class="signs">☀️</p>
+              <p class="text">26°/12°</p>
+            </div>
+            <div class="col">
+              <p class="day">Sat</p>
+              <p class="signs">🌤️</p>
+              <p class="text">26°/16°</p>
+            </div>
+            <div class="col">
+              <p class="day">Sun</p>
+              <p class="signs">☁️</p>
+              <p class="text">29°/19°</p>
+            </div>
+            <div class="col">
+              <p class="day">Mon</p>
+              <p class="signs">🌤️</p>
+              <p class="text">23°/17°</p>
+            </div>
+            <div class="col">
+              <p class="day">Tue</p>
+              <p class="signs">🌧️</p>
+              <p class="text">24°/16°</p>
+            </div>
         <div class="container under-Sign">
           <div class="row justify-content-start">
             <div class="col">
         <div class="Undersign" id="under-Sign">created by Josephine Jacobs,
-          <a href="https://github.com/JosephineJacobs/WeatherApp-JJ" target="_blank"> Open-Source code</a></div>
+          <a href="https://github.com/JosephineJacobs/Vanilla-weather-app" target="_blank">Open-Source code</a></div>
         </div>
       </div>
     </div>
